fixed color for text in game in dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -86,7 +86,7 @@
 	justify-content: center;
 	font-size: 2em;
 	cursor: pointer;
-	color: #090909;
+	color: #090909 !important;
 }
 
 .team:active {
